pkg/grammars/pqlgrammar/pql_parser.go
// Code generated from PQL.g4 by ANTLR 4.13.2. DO NOT EDIT.

package pqlgrammar // PQL
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type PQL struct {
	*antlr.BaseParser
}

var PQLParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func pqlParserInit() {
	staticData := &PQLParserStaticData
	staticData.LiteralNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "'{'", "'}'", "'('", "')'", "','", "':'", "'.'",
		"'..'", "'-'", "'+'", "'*'", "'/'", "'%'", "'|'", "'::'", "'='", "'!='",
		"'<='", "'>='", "'<'", "'>'", "", "", "", "", "", "' '",
	}
	staticData.SymbolicNames = []string{
		"", "COMMENT", "WS", "KW_FROM", "KW_FILTER", "KW_DERIVE", "KW_SELECT",
		"KW_GROUP", "KW_AGGREGATE", "KW_JOIN", "KW_SORT", "KW_TAKE", "KW_SKIP",
		"KW_WINDOW", "KW_ARRAY_JOIN", "KW_SIDE", "KW_INNER", "KW_LEFT", "KW_RIGHT",
		"KW_FULL", "KW_AS", "KW_FINAL", "LBRACE", "RBRACE", "LPAREN", "RPAREN",
		"COMMA", "COLON", "DOT", "RANGE", "MINUS", "PLUS", "STAR", "SLASH",
		"PERCENT", "PIPE", "CAST_OP", "EQ", "NEQ", "LTE", "GTE", "LT", "GT",
		"FLOAT", "INTEGER", "STRING", "IDENT", "NEWLINE", "FILTER_LINE",
	}
	staticData.RuleNames = []string{
		"pipeline", "transform", "fromTransform", "filterTransform", "filterBody",
		"deriveTransform", "selectTransform", "groupTransform", "joinTransform",
		"joinSide", "joinCond", "joinCondExpr", "joinCondToken", "joinCondInner",
		"arrayJoinTransform", "sortTransform", "takeTransform", "skipTransform",
		"windowTransform", "assignmentList", "assignment", "selectionList",
		"selectionItem", "keyList", "keyItem", "sortList", "sortItem", "opaqueExpr",
		"opaqueToken", "opaqueInner",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// PQLInit initializes any static state used to implement PQL. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewPQL(). You can call this function if you wish to initialize the static state ahead
// of time.
func PQLInit() {
	staticData := &PQLParserStaticData
	staticData.once.Do(pqlParserInit)
}

// NewPQL produces a new parser instance for the optional input antlr.TokenStream.
func NewPQL(input antlr.TokenStream) *PQL {
	PQLInit()
	this := new(PQL)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &PQLParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "PQL.g4"

	return this
}

// PQL tokens.
const (
	PQLEOF           = antlr.TokenEOF
	PQLCOMMENT       = 1
	PQLWS            = 2
	PQLKW_FROM       = 3
	PQLKW_FILTER     = 4
	PQLKW_DERIVE     = 5
	PQLKW_SELECT     = 6
	PQLKW_GROUP      = 7
	PQLKW_AGGREGATE  = 8
	PQLKW_JOIN       = 9
	PQLKW_SORT       = 10
	PQLKW_TAKE       = 11
	PQLKW_SKIP       = 12
	PQLKW_WINDOW     = 13
	PQLKW_ARRAY_JOIN = 14
	PQLKW_SIDE       = 15
	PQLKW_INNER      = 16
	PQLKW_LEFT       = 17
	PQLKW_RIGHT      = 18
	PQLKW_FULL       = 19
	PQLKW_AS         = 20
	PQLKW_FINAL      = 21
	PQLLBRACE        = 22
	PQLRBRACE        = 23
	PQLLPAREN        = 24
	PQLRPAREN        = 25
	PQLCOMMA         = 26
	PQLCOLON         = 27
	PQLDOT           = 28
	PQLRANGE         = 29
	PQLMINUS         = 30
	PQLPLUS          = 31
	PQLSTAR          = 32
	PQLSLASH         = 33
	PQLPERCENT       = 34
	PQLPIPE          = 35
	PQLCAST_OP       = 36
	PQLEQ            = 37
	PQLNEQ           = 38
	PQLLTE           = 39
	PQLGTE           = 40
	PQLLT            = 41
	PQLGT            = 42
	PQLFLOAT         = 43
	PQLINTEGER       = 44
	PQLSTRING        = 45
	PQLIDENT         = 46
	PQLNEWLINE       = 47
	PQLFILTER_LINE   = 48
)

// PQL rules.
const (
	PQLRULE_pipeline           = 0
	PQLRULE_transform          = 1
	PQLRULE_fromTransform      = 2
	PQLRULE_filterTransform    = 3
	PQLRULE_filterBody         = 4
	PQLRULE_deriveTransform    = 5
	PQLRULE_selectTransform    = 6
	PQLRULE_groupTransform     = 7
	PQLRULE_joinTransform      = 8
	PQLRULE_joinSide           = 9
	PQLRULE_joinCond           = 10
	PQLRULE_joinCondExpr       = 11
	PQLRULE_joinCondToken      = 12
	PQLRULE_joinCondInner      = 13
	PQLRULE_arrayJoinTransform = 14
	PQLRULE_sortTransform      = 15
	PQLRULE_takeTransform      = 16
	PQLRULE_skipTransform      = 17
	PQLRULE_windowTransform    = 18
	PQLRULE_assignmentList     = 19
	PQLRULE_assignment         = 20
	PQLRULE_selectionList      = 21
	PQLRULE_selectionItem      = 22
	PQLRULE_keyList            = 23
	PQLRULE_keyItem            = 24
	PQLRULE_sortList           = 25
	PQLRULE_sortItem           = 26
	PQLRULE_opaqueExpr         = 27
	PQLRULE_opaqueToken        = 28
	PQLRULE_opaqueInner        = 29
)

// IPipelineContext is an interface to support dynamic dispatch.
type IPipelineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllTransform() []ITransformContext
	Transform(i int) ITransformContext

	// IsPipelineContext differentiates from other interfaces.
	IsPipelineContext()
}

type PipelineContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPipelineContext() *PipelineContext {
	var p = new(PipelineContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PQLRULE_pipeline
	return p
}

func InitEmptyPipelineContext(p *PipelineContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PQLRULE_pipeline
}

func (*PipelineContext) IsPipelineContext() {}

func NewPipelineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PipelineContext {
	var p = new(PipelineContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PQLRULE_pipeline

	return p
}

func (s *PipelineContext) GetParser() antlr.Parser { return s.parser }

func (s *PipelineContext) EOF() antlr.TerminalNode {
	return s.GetToken(PQLEOF, 0)
}

func (s *PipelineContext) AllTransform() []ITransformContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITransformContext); ok {
			len++
		}
	}

	tst := make([]ITransformContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITransformContext); ok {
			tst[i] = t.(ITransformContext)
			i++
		}
	}

	return tst
}

func (s *PipelineContext) Transform(i int) ITransformContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITransformContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITransformContext)
}

func (s *PipelineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PipelineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PipelineContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PQLListener); ok {
		listenerT.EnterPipeline(s)
	}
}

func (s *PipelineContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PQLListener); ok {
		listenerT.ExitPipeline(s)
	}
}

func (s *PipelineContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PQLVisitor:
		return t.VisitPipeline(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PQL) Pipeline() (localctx IPipelineContext) {
	localctx = NewPipelineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, PQLRULE_pipeline)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(61)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&32504) != 0) {
		{
			p.SetState(60)
			p.Transform()
		}

		p.SetState(63)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(65)
		p.Match(PQLEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITransformContext is an interface to support dynamic dispatch.
type ITransformContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	FromTransform() IFromTransformContext
	FilterTransform() IFilterTransformContext
	DeriveTransform() IDeriveTransformContext
	SelectTransform() ISelectTransformContext
	GroupTransform() IGroupTransformContext
	JoinTransform() IJoinTransformContext
	ArrayJoinTransform() IArrayJoinTransformContext
	SortTransform() ISortTransformContext
	TakeTransform() ITakeTransformContext
	SkipTransform() ISkipTransformContext
	WindowTransform() IWindowTransformContext

	// IsTransformContext differentiates from other interfaces.
	IsTransformContext()
}

type TransformContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTransformContext() *TransformContext {
	var p = new(TransformContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PQLRULE_transform
	return p
}

func InitEmptyTransformContext(p *TransformContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PQLRULE_transform
}

func (*TransformContext) IsTransformContext() {}

func NewTransformContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TransformContext {
	var p = new(TransformContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PQLRULE_transform

	return p
}

func (s *TransformContext) GetParser() antlr.Parser { return s.parser }

func (s *TransformContext) FromTransform() IFromTransformContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFromTransformContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFromTransformContext)
}

func (s *TransformContext) FilterTransform() IFilterTransformContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFilterTransformContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFilterTransformContext)
}

func (s *TransformContext) DeriveTransform() IDeriveTransformContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeriveTransformContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeriveTransformContext)
}

func (s *TransformContext) SelectTransform() ISelectTransformContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISelectTransformContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISelectTransformContext)
}

func (s *TransformContext) GroupTransform() IGroupTransformContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGroupTransformContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGroupTransformContext)
}

func (s *TransformContext) JoinTransform() IJoinTransformContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJoinTransformContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IJoinTransformContext)
}

func (s *TransformContext) ArrayJoinTransform() IArrayJoinTransformContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IArrayJoinTransformContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IArrayJoinTransformContext)
}

func (s *TransformContext) SortTransform() ISortTransformContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISortTransformContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISortTransformContext)
}

func (s *TransformContext) TakeTransform() ITakeTransformContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITakeTransformContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITakeTransformContext)
}

func (s *TransformContext) SkipTransform() ISkipTransformContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISkipTransformContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISkipTransformContext)
}

func (s *TransformContext) WindowTransform() IWindowTransformContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IWindowTransformContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IWindowTransformContext)
}

func (s *TransformContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TransformContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TransformContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PQLListener); ok {
		listenerT.EnterTransform(s)
	}
}

func (s *TransformContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PQLListener); ok {
		listenerT.ExitTransform(s)
	}
}

func (s *TransformContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PQLVisitor:
		return t.VisitTransform(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PQL) Transform() (localctx ITransformContext) {
	localctx = NewTransformContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, PQLRULE_transform)
	p.SetState(78)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case PQLKW_FROM:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(67)
			p.FromTransform()
		}

	case PQLKW_FILTER:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(68)
			p.FilterTransform()
		}

	case PQLKW_DERIVE:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(69)
			p.DeriveTransform()
		}

	case PQLKW_SELECT:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(70)
			p.SelectTransform()
		}

	case PQLKW_GROUP:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(71)
			p.GroupTransform()
		}

	case PQLKW_JOIN:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(72)
			p.JoinTransform()
		}

	case PQLKW_ARRAY_JOIN:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(73)
			p.ArrayJoinTransform()
		}

	case PQLKW_SORT:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(74)
			p.SortTransform()
		}

	case PQLKW_TAKE:
		p.EnterOuterAlt(localctx, 9)
		{
			p.SetState(75)
			p.TakeTransform()
		}

	case PQLKW_SKIP:
		p.EnterOuterAlt(localctx, 10)
		{
			p.SetState(76)
			p.SkipTransform()
		}

	case PQLKW_WINDOW:
		p.EnterOuterAlt(localctx, 11)
		{
			p.SetState(77)
			p.WindowTransform()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFromTransformContext is an interface to support dynamic dispatch.
type IFromTransformContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	KW_FROM() antlr.TerminalNode
	IDENT() antlr.TerminalNode
	KW_FINAL() antlr.TerminalNode

	// IsFromTransformContext differentiates from other interfaces.
	IsFromTransformContext()
}

type FromTransformContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFromTransformContext() *FromTransformContext {
	var p = new(FromTransformContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PQLRULE_fromTransform
	return p
}

func InitEmptyFromTransformContext(p *FromTransformContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PQLRULE_fromTransform
}

func (*FromTransformContext) IsFromTransformContext() {}

func NewFromTransformContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FromTransformContext {
	var p = new(FromTransformContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PQLRULE_fromTransform

	return p
}

func (s *FromTransformContext) GetParser() antlr.Parser { return s.parser }

func (s *FromTransformContext) KW_FROM() antlr.TerminalNode {
	return s.GetToken(PQLKW_FROM, 0)
}

func (s *FromTransformContext) IDENT() antlr.TerminalNode {
	return s.GetToken(PQLIDENT, 0)
}

func (s *FromTransformContext) KW_FINAL() antlr.TerminalNode {
	return s.GetToken(PQLKW_FINAL, 0)
}

func (s *FromTransformContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FromTransformContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FromTransformContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PQLListener); ok {
		listenerT.EnterFromTransform(s)
	}
}

func (s *FromTransformContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PQLListener); ok {
		listenerT.ExitFromTransform(s)
	}
}

func (s *FromTransformContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PQLVisitor:
		return t.VisitFromTransform(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PQL) FromTransform() (localctx IFromTransformContext) {
	localctx = NewFromTransformContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, PQLRULE_fromTransform)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(80)
		p.Match(PQLKW_FROM)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(81)
		p.Match(PQLIDENT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(83)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == PQLKW_FINAL {
		{
			p.SetState(82)
			p.Match(PQLKW_FINAL)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFilterTransformContext is an interface to support dynamic dispatch.
type IFilterTransformContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	KW_FILTER() antlr.TerminalNode
	FilterBody() IFilterBodyContext

	// IsFilterTransformContext differentiates from other interfaces.
	IsFilterTransformContext()
}

type FilterTransformContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFilterTransformContext() *FilterTransformContext {
	var p = new(FilterTransformContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PQLRULE_filterTransform
	return p
}

func InitEmptyFilterTransformContext(p *FilterTransformContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PQLRULE_filterTransform
}

func (*FilterTransformContext) IsFilterTransformContext() {}

func NewFilterTransformContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FilterTransformContext {
	var p = new(FilterTransformContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PQLRULE_filterTransform

	return p
}

func (s *FilterTransformContext) GetParser() antlr.Parser { return s.parser }

func (s *FilterTransformContext) KW_FILTER() antlr.TerminalNode {
	return s.GetToken(PQLKW_FILTER, 0)
}

func (s *FilterTransformContext) FilterBody() IFilterBodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFilterBodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFilterBodyContext)
}

func (s *FilterTransformContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FilterTransformContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FilterTransformContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PQLListener); ok {
		listenerT.EnterFilterTransform(s)
	}
}

func (s *FilterTransformContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PQLListener); ok {
		listenerT.ExitFilterTransform(s)
	}
}

func (s *FilterTransformContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PQLVisitor:
		return t.VisitFilterTransform(s)

	default:
		return t.VisitChildren(s)
	}
}
